# ccc

./: .gitignore  CHANGELOG.md  README.md  cc_usage.sh  pyproject.toml
.self_heal/: config.yaml
tests/: SELF_HEALING_GUIDE.md  __init__.py  conftest.py  parser_extracted.py  runner.py
tests/self_heal/: __init__.py  analyzer.py  classifier.py  code_modifier.py  fix_generator.py  regression_detector.py  sync_verifier.py
tests/unit/: __init__.py  test_ansi_stripping.py  test_date_parsing.py  test_determinism.py  test_regex_extraction.py  test_sync.py  test_validation.py
